# benchmark

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
attrbench/: __init__.py  attribution_method.py  method_factory.py  model.py  plot.py  result.py  train_model.py  util.py
attrbench/attribution/: __init__.py  attribution.py  captum_attribution.py
attrbench/bam/: __init__.py  bam_dataset.py  input_dependence_rate.py
attrbench/data/: __init__.py  attributions_dataset.py  index_dataset.py  random_access_nd_array_tree.py
attrbench/data_dependent/: input_dependence_rate.py  model_contrast_score.py
attrbench/datasets/: __init__.py  aptos.py  bam_dataset.py  cifar.py  imagenette2.py  mnist.py
attrbench/distributed/: __init__.py  attributions_computation.py  distributed_computation.py  distributed_sampler.py  message.py  sample_selection.py  worker.py
attrbench/evaluation/: __init__.py  impact_coverage.py  impact_score.py  infidelity.py  input_dependence_rate.py  input_independence_rate.py  insertion_deletion_curves.py  max_sensitivity.py  model_contrast_score.py  result.py  sensitivity_n.py  util.py
attrbench/functional/: __init__.py  deletion_until_flip.py  impact_coverage.py  impact_score.py  infidelity.py  insertion_deletion.py  irof.py  irof_iiof.py  max_sensitivity.py  sensitivity_n.py
attrbench/impact_coverage/: make_adv_patch.py
attrbench/infidelity/: __init__.py  infidelity.py
attrbench/insertion_deletion_curves/: __init__.py  insertion_deletion_curves.py
attrbench/lib/: __init__.py  attribution_writer.py  make_adv_patch.py  masker.py  masking_policy.py  nd_array_tree.py  scene_overlay_dataset.py  segmentation.py  segmented_image_batch.py  stat.py  util.py
attrbench/masking/: blurring_masker.py  constant_masker.py  image_masker.py  random_masker.py  sample_average_masker.py  tabular_masker.py
attrbench/max_sensitivity/: __init__.py  max_sensitivity.py
attrbench/metrics/: __init__.py  deletion_until_flip.py  distributed_metric.py  impact_coverage.py  impact_score.py  infidelity.py  insertion_deletion.py  irof_iiof.py  masker_metric.py  max_sensitivity.py  metric.py  metric_result.py  metric_worker.py  sensitivity_n.py
attrbench/model_dependent/: train_with_rand_labels.py
attrbench/models/: __init__.py  alexnet.py  basic_cnn.py  densenet.py  mobilenet_v2.py  resnet.py  squeezenet.py
attrbench/noise_invariance/: __init__.py
attrbench/plot/: cluster_plot.py  convergence_plot.py  correlations.py  krippendorff_alpha.py  lib.py  mad_ratio_plot.py  wilcoxon_barplot.py  wilcoxon_summary_plot.py
attrbench/sensitivity_n/: sensitivity_n.py
attrbench/stat/: __init__.py  krippendorff_alpha.py  stat.py
attrbench/suite/: __init__.py  config.py  dashboard.py  metric_loader.py  metrics.py  result.py  (+3 more)
attribench/: __init__.py  _attribution_method.py  _method_factory.py  _model_factory.py  _segmentation.py  _stat.py  method_factory.py  segmentation.py
benchmark/: __init__.py  train_model.py
docs/: conf.py  example_notebooks.rst  general_api.rst  index.rst
experiments/: full_benchmark.py  impact_score.py  infidelity.py  insertion_deletion_curves.py  max_sensitivity.py  plot_dir.py  sensitivity_n.py
notebooks/: dataset_masking_acc.ipynb  deletion_curves.ipynb  impact_coverage.ipynb  impact_score.ipynb  infidelity.ipynb  insertion_curves.ipynb  masking_accuracy.ipynb  max_sensitivity.ipynb  model_masking_acc.ipynb  model_randomisation.ipynb  noise_invariance.ipynb  sandbox.ipynb  sanity_check.ipynb  sensitivity_n.ipynb  simple_sensitivity.ipynb
parallel_sandbox/: .gitignore  attributions_computation.py  deletion_singlegpu.ipynb  dist_attr.py  distributed_deletion.py  distributed_impact_coverage.py  distributed_infidelity.py  distributed_irof.py  distributed_max_sens.py  distributed_minimal_subset.py  distributed_sandbox.py  distributed_seg_sens_n.py  distributed_sens_n.py  get_deletion_result.py  make_patches.py  methods.py  read_results.py  run_all.sh  sample_selection.py
sandbox/: captum_cifar10.ipynb  cifar_zero_attrs.ipynb  load_models.py  logit_softmax.ipynb  pdf_report.py  plot_result.ipynb  quick_metric.py  show_results.ipynb  test_bam_models.py  test_infid.py  test_methods.ipynb  test_model.ipynb  train_Aptos.py  train_cifar10.py  val_aptos_densenet.py
scripts/: Untitled.ipynb  captum_cifar10.ipynb  copy_result.py  dashboard.py  deletion_curves.py  finetuning_torchvision_models_on_imagenette.ipynb  hpc_test.pbs  hpc_test.py  hpc_test2.pbs  impact_coverage.py  impact_score.py  infidelity.py  insertion_curves.py  insertion_deletion_curves.py  irof_test.py  load_models.py  max_sensitivity.py  merge_results.py  open_dashboard.py  plot_dir.py  run_dashboard.py  sandbox.ipynb  sandbox.py  sensitivity_n.py  slic_dist.py  slic_test.py  strip_result.py  test_methods.ipynb  train_adverserial_patch.py  train_cifar10.py  train_mnist_cnn.py  train_patch.py
src/: arguments.py  main.py  sensitivity_analysis.py  vars.py
tests/: test.py
tutorials/: deletion_multigpu.py
util/: vars.py
(+857 files in other folders)
