[metadata]
name = attrbench
version = 0.0.1
author = Arne Gevaert, Axel-Jan Rousseau
author_email = arne.gevaert@ugent.be, axeljan.rousseau@uhasselt.be
description = A benchmark for feature attribution techniques
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zoeparman/benchmark
project_urls = 
    Bug Tracker = https://github.com/zoeparman/benchmark/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    torch>=1.5.0
    h5py>=2.0.0
    tqdm>=4.0.0
    krippendorff>=0.4.0
    opencv-python>=4.0.0.0
    scikit-learn>=0.24.0
    seaborn>=0.10.0

[options.packages.find]
where = src

[options.extras_require]
dash = 
    dash>=1.18.0
    dash-bootstrap-components>=0.10.0
    dash-core-components>=1.14.0
    dash-html-components>=1.1.0
    dash-renderer>=1.8.0
    dash-table>=4.11.0
dev =
    pytest==6.2.5