[metadata]
name = attribench
version = 0.0.1
author = Arne Gevaert, Axel-Jan Rousseau
author_email = arne.gevaert@ugent.be, axeljan.rousseau@uhasselt.be
description = A benchmark for feature attribution techniques
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/arnegevaert/benchmark
project_urls = 
    Bug Tracker = https://github.com/arnegevaert/benchmark/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
python_requires = >=3.10
install_requires =
    torch>=1.5.0
    h5py>=2.0.0
    tqdm>=4.0.0
    krippendorff>=0.5.0
    opencv-python>=4.7.0.0
    scikit-learn>=1.2.0
    scikit-image
    seaborn>=0.12.0
    pyyaml

[options.packages.find]
where = .
include = attribench

[options.extras_require]
dev =
    pytest
    sphinx
    sphinx-rtd-theme
    numpydoc